<resources>
    <!-- Titres -->
    <string name="app_name">cartoradio-collecte-natif</string>
    <string name="title_activity_main">Cartoradio Collecte Natif</string>
    <string name="title_activity_settings">Paramétrage</string>
    <string name="title_activity_parcours">Mes parcours</string>

    <!-- Menu -->
    <string name="action_settings">Paramétrage</string>
    <string name="action_parcours">Mes parcours</string>

    <!-- Main -->
    <string name="dialog_titre_parcours">Démarrer un parcours</string>
    <string name="dialog_input_titre">Titre du parcours</string>
    <string name="msg_parcours_cree">Parcours créé</string>
    <string name="msg_titre_obligatoire">Titre obligatoire</string>

    <!-- Settings -->
    <string name="pref_collecte_activer_title">Activer la collecte périodique</string>
    <string name="pref_collecte_frequence_title">Fréquence de la collecte</string>
    <string-array name="pref_collecte_frequence_list_titles">
        <item>10 secondes</item>
        <item>1 minute</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 heure</item>
        <item>2 heures</item>
    </string-array>
    <string-array name="pref_collecte_frequence_list_values">
        <item>10</item>
        <item>60</item>
        <item>600</item>
        <item>1800</item>
        <item>3600</item>
        <item>7200</item>
    </string-array>


    <string name="termine_le">Terminé le</string>
    <string name="debute_le">Débuté le</string>
    <string name="partager_le_parcours">Partager le parcours</string>
    <string name="visualiser_le_parcours">Visualiser le parcours</string>
    <string name="supprimer_le_parcours">Supprimer le parcours</string>
    <string name="synchronise">synchronisé</string>
    <string name="non_synchronise">non synchronisé</string>
    <string name="synchronisation_en_cours">synchronisation…</string>
    <string name="actif">actif</string>
    <string name="une_erreur_est_survenue">Erreur de communication avec le serveur</string>
    <string name="parcours_supprime">Parcours supprimé</string>
    <string name="partager_parcours">Partager le parcours</string>
    <string name="visualiser_parcours">Visualiser le parcours</string>

    <string name="remote_url_baseurl">https://cartoradio-collecte-demo.anfr.fr</string>
    <string name="remote_url_baseurl_anfr">https://cartoradio-collecte-demo.anfr.fr</string>



    <!-- Notifications -->
    <string name="collecte_notification_title">Cartoradio : collecte activée</string>
    <string name="collecte_notification_text">Certaines mesures ne sont pas synchronisées.</string>
    <string name="parcours_notification_title">Cartoradio : parcours en cours</string>
    <string name="parcours_notification_text_template">Enregistrement de "%1$s"</string>

    <string name="action_stop">Arrêter</string>
    <string name="action_finish">Terminer le parcours</string>
    <string name="point_point_point">…</string>
    <string name="persmissions_non_accordees">Certaines permissions n\'ont pas été accordées !</string>

</resources>
