<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frag_parcours"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeightSmall"
    android:orientation="horizontal"
    android:paddingEnd="12dip"
    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
    android:paddingTop="12dip">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <TextView
            android:id="@+id/frag_parcours_titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:textColor="?android:attr/textColorAlertDialogListItem" />

        <TextView
            android:id="@+id/frag_parcours_statut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/frag_date_debut_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/frag_parcours_date_debut_label"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/debute_le" />

            <TextView
                android:id="@+id/frag_parcours_date_debut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/frag_date_fin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/frag_parcours_date_fin_label"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/termine_le" />

            <TextView
                android:id="@+id/frag_parcours_date_fin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/frag_view"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="42dip"
        android:layout_height="42dip"
        android:backgroundTint="?attr/colorAccent"
        android:contentDescription="@string/visualiser_le_parcours"
        android:elevation="4dp"
        android:theme="@style/Widget.AppCompat.Button.Colored"
        app:srcCompat="@android:drawable/ic_menu_view" />

    <ImageButton
        android:id="@+id/frag_share"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="42dip"
        android:layout_height="42dip"
        android:backgroundTint="?attr/colorAccent"
        android:contentDescription="@string/partager_le_parcours"
        android:elevation="4dp"
        android:theme="@style/Widget.AppCompat.Button.Colored"
        app:srcCompat="@android:drawable/ic_menu_share" />

    <ImageButton
        android:id="@+id/frag_delete"
        android:layout_width="42dip"
        android:layout_height="42dip"
        android:backgroundTint="@android:color/holo_red_light"
        android:contentDescription="@string/supprimer_le_parcours"
        android:elevation="4dp"
        android:theme="@style/Widget.AppCompat.Button.Colored"
        app:srcCompat="@android:drawable/ic_menu_delete" />
</LinearLayout>